--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,6 @@
 html, body {
 	background-color:white;
+	background-image:url('images/geometry.png');
 	color:black;
 	margin:0;
 	padding:0;
@@ -10,6 +11,7 @@ html, body {
 #nav_wrapper {
 	background-color:#ed462f;
 	position:fixed;
+	top:0px;
 	width:100%;
 	height:50px;
 	z-index:12;
@@ -17,40 +19,38 @@ html, body {
 
 #content_wrapper {
 	position:relative;
+	top:50px;
 	width:100%;
 	height:100%;
 }
 
-#arrow_left_container {
-	position:fixed;
-	left:0;
-	height:100%;
-	width:200px;
-	z-index:10;
-}
-
-#arrow_right_container {
-	position:fixed;
-	right:0;
-	height:100%;
-	width:200px;
-	z-index:10;
-}
-
-#arrow_left {
+#welcome {
 	position:relative;
-	height:200px;
-	width:auto;
-	left:-100px;
-	top:50%;
-	margin-top:-100px;
+	top:15%;
+	font-size:250%;
+	font-family:Lucida Sans Unicode;
+	text-align:center;
 }
 
-#arrow_right {
+#intro {
 	position:relative;
-	height:200px;
-	width:auto;
-	left:190px;
-	top:50%;
-	margin-top:-100px;
+	top: 20%;
+	font-size:200%;
+	font-family:Lucida Sans Unicode;
+	text-align:center;
+}
+
+#form {
+	position:relative;
+	top:35%;
+	text-align:center;
+}
+
+#searchbar
+{
+	position:absolute;
+	height:40px;
+	left:20%;
+	width:60%;
+	font-size:large;
 }
