--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,8 @@
+@font-face{
+  font-family:'foncy';
+  src: url('fonts/foncy.ttf'); 
+}
+
 html, body {
 	background-color:white;
 	background-image:url('images/geometry.png');
@@ -28,7 +33,7 @@ html, body {
 	position:relative;
 	top:15%;
 	font-size:250%;
-	font-family:Lucida Sans Unicode;
+	font-family:foncy;
 	text-align:center;
 }
 
@@ -36,7 +41,7 @@ html, body {
 	position:relative;
 	top: 20%;
 	font-size:200%;
-	font-family:Lucida Sans Unicode;
+	font-family:foncy;
 	text-align:center;
 }
 
