--- a/searchstyle.css
+++ b/searchstyle.css
@@ -73,9 +73,9 @@ html, body {
 	background-color:#ffffff;
 }
 
-
 #content_wrapper {
 	position:relative;
+	top:50px;
 	width:100%;
 	height:100%;
 }
