--- a/searchstyle.css
+++ b/searchstyle.css
@@ -81,8 +81,19 @@ html, body {
 }
 
 #content_frame {
-	height:100%;
-	width:100%;
+    position:fixed;
+    top:-55px;
+    height:110%;
+    width:100%;
+    visibility:hidden;
+}
+
+#desc_frame {
+    position:absolute;
+    top:0px;
+    height:100%;
+    width:100%;
+
 }
 
 #arrow_left_container {
@@ -117,4 +128,16 @@ html, body {
 	left:190px;
 	top:50%;
 	margin-top:-100px;
+}
+
+#return {
+	font-family:foncy;
+	position:fixed;
+	bottom:0px;
+	right:10%;
+	padding:5px;
+	color:#ed462f;
+	background-color:#D9D9D9;
+	z-index:10;
+	visibility:hidden;
 }
