--- a/mystyle.css
+++ b/mystyle.css
@@ -56,6 +56,30 @@ html, body {
 	position:absolute;
 	height:40px;
 	left:20%;
-	width:60%;
+	width:40%;
 	font-size:large;
+}
+
+#citybar
+{
+	position:absolute;
+	height:40px;
+	left:60%;
+	width:20%;
+	margin-left:5px;
+	font-size:large;
+}
+
+#submitbtn
+{
+	position:relative;
+	top:55px;
+	width:20%;
+	height:40px;
+	font-size:x-large;
+	padding-top:2px;
+	border:none;
+	color:#ffffff;
+	font-family:foncy;
+	background-color: rgb(235, 73, 36);
 }
