--- a/mystyle.css
+++ b/mystyle.css
@@ -81,5 +81,5 @@ html, body {
 	border:none;
 	color:#ffffff;
 	font-family:foncy;
-	background-color: rgb(235, 73, 36);
+	background-color: #ed462f;
 }
