--- a/searchstyle.css
+++ b/searchstyle.css
@@ -23,6 +23,7 @@ html, body {
 #logo {
 	height:50px;
 	width:auto;
+	cursor:pointer;
 }
 
 #apply {
@@ -92,23 +93,29 @@ html, body {
     position:absolute;
     top:0px;
     height:100%;
-    width:100%;
-
+    left:15%;
+    width:70%;
+    font-family:Lucida Sans Unicode;
 }
+
 
 #arrow_left_container {
 	position:fixed;
 	left:0;
-	height:100%;
-	width:200px;
+	height:400px;
+	width:150px;
+	top:50%;
+	margin-top:-200px;
 	z-index:10;
 }
 
 #arrow_right_container {
 	position:fixed;
 	right:0;
-	height:100%;
-	width:200px;
+	height:400px;
+	width:150px;
+	top:50%;
+	margin-top:-200px;
 	z-index:10;
 }
 
@@ -140,4 +147,5 @@ html, body {
 	background-color:#D9D9D9;
 	z-index:10;
 	visibility:hidden;
+	cursor:pointer;
 }
